src/test/compile-fail/bang-tailexpr.rs
fn f() -> ! {
    3 //! ERROR expected `_|_` but found `int`
}
fn main() { }
